--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ~/ByFlower_Server/src/index.js"
+    "start": "node ./src/index.js"
   },
   "author": "",
   "license": "ISC",
