--- a/package.json
+++ b/package.json
@@ -5,15 +5,28 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start:dev": "nodemon --watch \"./src/**/*.*\" --exec babel-node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "model": "node ./orm.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "babel-node": "^0.0.1-security",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "sequelize": "^6.31.1"
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.3.2",
+    "nodemon": "^2.0.22",
+    "path": "^0.12.7",
+    "sequelize": "^6.31.1",
+    "sequelize-auto": "^0.8.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/node": "^7.22.1"
   }
 }
